// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`withMigrationManager > mysql driver > should create a MySqlMigrationManager and call fn with context 1`] = `
[
  {
    "client": {
      "query": [Function],
    },
    "directory": "/migrations",
    "logger": {
      "debug": [MockFunction],
      "info": [MockFunction],
    },
    "namespace": undefined,
    "tableOptions": undefined,
  },
]
`;

exports[`withMigrationManager > mysql driver > should pass tableOptions when migrationsTable is set 1`] = `
[
  {
    "client": {
      "query": [Function],
    },
    "directory": "/migrations",
    "logger": {
      "debug": [MockFunction],
      "info": [MockFunction],
    },
    "namespace": undefined,
    "tableOptions": {
      "table": "my_migrations",
    },
  },
]
`;

exports[`withMigrationManager > postgres driver > should create a MigrationManager and call fn with context 1`] = `
[
  {
    "client": {
      "query": [Function],
    },
    "directory": "/migrations",
    "logger": {
      "debug": [MockFunction],
      "info": [MockFunction],
    },
    "namespace": undefined,
    "tableOptions": undefined,
  },
]
`;

exports[`withMigrationManager > postgres driver > should pass tableOptions when migrationsTable is set 1`] = `
[
  {
    "client": {
      "query": [Function],
    },
    "directory": "/migrations",
    "logger": {
      "debug": [MockFunction],
      "info": [MockFunction],
    },
    "namespace": undefined,
    "tableOptions": {
      "table": "custom_migrations",
    },
  },
]
`;

exports[`withMigrationManager > sqlite driver > should create a SqliteMigrationManager and call fn with context 1`] = `
[
  {
    "client": {
      "query": [MockFunction],
    },
    "directory": "/migrations",
    "logger": {
      "debug": [MockFunction],
      "info": [MockFunction],
    },
    "tableOptions": undefined,
  },
]
`;

exports[`withMigrationManager > sqlite driver > should pass tableOptions when migrationsTable is set 1`] = `
[
  {
    "client": {
      "query": [MockFunction],
    },
    "directory": "/migrations",
    "logger": {
      "debug": [MockFunction],
      "info": [MockFunction],
    },
    "tableOptions": {
      "table": "sqlite_migrations",
    },
  },
]
`;

exports[`withMigrationManager > unsupported drivers > should throw ProteusError for memory driver 1`] = `[ProteusError: Migrations not supported for driver "memory"]`;

exports[`withMigrationManager > unsupported drivers > should throw ProteusError for mongodb driver 1`] = `[ProteusError: Migrations not supported for driver "mongodb"]`;

exports[`withMigrationManager > unsupported drivers > should throw ProteusError for redis driver 1`] = `[ProteusError: Migrations not supported for driver "redis"]`;

exports[`withMigrationManager > unsupported drivers > should throw ProteusError for unknown driver 1`] = `[ProteusError: Migrations not supported for driver "unknown"]`;

exports[`wrapMysqlConnection > should handle result header with no affectedRows or insertId 1`] = `
{
  "insertId": 0,
  "rowCount": 0,
  "rows": [],
}
`;

exports[`wrapMysqlConnection > should wrap array results (SELECT queries) 1`] = `
{
  "insertId": 0,
  "rowCount": 2,
  "rows": [
    {
      "id": 1,
      "name": "row1",
    },
    {
      "id": 2,
      "name": "row2",
    },
  ],
}
`;

exports[`wrapMysqlConnection > should wrap non-array results (INSERT/UPDATE/DELETE queries) 1`] = `
{
  "insertId": 42,
  "rowCount": 3,
  "rows": [],
}
`;

exports[`wrapPoolClient > should handle null rowCount 1`] = `
{
  "rowCount": 0,
  "rows": [],
}
`;

exports[`wrapPoolClient > should pass through without params 1`] = `
{
  "rowCount": 1,
  "rows": [
    {
      "count": 5,
    },
  ],
}
`;

exports[`wrapPoolClient > should wrap a PoolClient query returning rows 1`] = `
{
  "rowCount": 1,
  "rows": [
    {
      "id": 1,
      "name": "test",
    },
  ],
}
`;
